feat: refine default EIP-1559 values per chain
Changes:
- Set default `min_allowed_tip` to `1` WEI globally.
- Set default `min_allowed_tip` to `1` GWEI on Gnosis.
- Set default `fee_history_blocks` to `20` on Mode.
- Reduce default `fallback` estimates by an order of magnitude on Mode.

[no ci]

--- a/packages/valory/connections/ledger/connection.yaml
+++ b/packages/valory/connections/ledger/connection.yaml
@@ -29,10 +29,120 @@ config:
       address: http://127.0.0.1:8545
       chain_id: 1337
       default_gas_price_strategy: eip1559
-      gas_price_strategies: &id001
-        gas_station:
+      gas_price_strategies:
+        gas_station: &id001
           gas_price_api_key: null
           gas_price_strategy: fast
+        eip1559:
+          max_gas_fast: 1500
+          fee_history_blocks: 10
+          fee_history_percentile: 5
+          min_allowed_tip: 1
+          default_priority_fee: null
+          fallback_estimate:
+            maxFeePerGas: 20000000000
+            maxPriorityFeePerGas: 3000000000
+          priority_fee_increase_boundary: 200
+      is_gas_estimation_enabled: true
+      poa_chain: false
+    ethereum_flashbots:
+      address: http://127.0.0.1:8545
+      chain_id: 1337
+      default_gas_price_strategy: eip1559
+      gas_price_strategies:
+        gas_station: *id001
+        eip1559:
+          max_gas_fast: 1500
+          fee_history_blocks: 10
+          fee_history_percentile: 5
+          min_allowed_tip: 1
+          default_priority_fee: null
+          fallback_estimate:
+            maxFeePerGas: 20000000000
+            maxPriorityFeePerGas: 3000000000
+          priority_fee_increase_boundary: 200
+      is_gas_estimation_enabled: true
+      poa_chain: false
+      authentication_private_key: null
+      flashbots_builders: []
+    solana:
+      address: http://127.0.0.1:8545
+      chain_id: 1337
+      default_gas_price_strategy: eip1559
+      gas_price_strategies:
+        gas_station: *id001
+        eip1559:
+          max_gas_fast: 1500
+          fee_history_blocks: 10
+          fee_history_percentile: 5
+          min_allowed_tip: 1
+          default_priority_fee: null
+          fallback_estimate:
+            maxFeePerGas: 20000000000
+            maxPriorityFeePerGas: 3000000000
+          priority_fee_increase_boundary: 200
+      is_gas_estimation_enabled: true
+      poa_chain: false
+    arbitrum:
+      address: http://127.0.0.1:8545
+      chain_id: 1337
+      default_gas_price_strategy: eip1559
+      gas_price_strategies:
+        gas_station: *id001
+        eip1559:
+          max_gas_fast: 1500
+          fee_history_blocks: 10
+          fee_history_percentile: 5
+          min_allowed_tip: 1
+          default_priority_fee: null
+          fallback_estimate:
+            maxFeePerGas: 20000000000
+            maxPriorityFeePerGas: 3000000000
+          priority_fee_increase_boundary: 200
+      is_gas_estimation_enabled: true
+      poa_chain: false
+    zksync:
+      address: http://127.0.0.1:8545
+      chain_id: 1337
+      default_gas_price_strategy: eip1559
+      gas_price_strategies:
+        gas_station: *id001
+        eip1559:
+          max_gas_fast: 1500
+          fee_history_blocks: 10
+          fee_history_percentile: 5
+          min_allowed_tip: 1
+          default_priority_fee: null
+          fallback_estimate:
+            maxFeePerGas: 20000000000
+            maxPriorityFeePerGas: 3000000000
+          priority_fee_increase_boundary: 200
+      is_gas_estimation_enabled: true
+      poa_chain: false
+    bnb:
+      address: http://127.0.0.1:8545
+      chain_id: 1337
+      default_gas_price_strategy: eip1559
+      gas_price_strategies:
+        gas_station: *id001
+        eip1559:
+          max_gas_fast: 1500
+          fee_history_blocks: 10
+          fee_history_percentile: 5
+          min_allowed_tip: 1
+          default_priority_fee: null
+          fallback_estimate:
+            maxFeePerGas: 20000000000
+            maxPriorityFeePerGas: 3000000000
+          priority_fee_increase_boundary: 200
+      is_gas_estimation_enabled: true
+      poa_chain: false
+    gnosis:
+      address: http://127.0.0.1:8545
+      chain_id: 1337
+      default_gas_price_strategy: eip1559
+      gas_price_strategies:
+        gas_station: *id001
         eip1559:
           max_gas_fast: 1500
           fee_history_blocks: 10
@@ -45,97 +155,130 @@ config:
           priority_fee_increase_boundary: 200
       is_gas_estimation_enabled: true
       poa_chain: false
-    ethereum_flashbots:
-      address: http://127.0.0.1:8545
-      chain_id: 1337
-      default_gas_price_strategy: eip1559
-      gas_price_strategies: *id001
-      is_gas_estimation_enabled: true
-      poa_chain: false
-      authentication_private_key: null
-      flashbots_builders: []
-    solana:
-      address: http://127.0.0.1:8545
-      chain_id: 1337
-      default_gas_price_strategy: eip1559
-      gas_price_strategies: *id001
-      is_gas_estimation_enabled: true
-      poa_chain: false
-    arbitrum:
-      address: http://127.0.0.1:8545
-      chain_id: 1337
-      default_gas_price_strategy: eip1559
-      gas_price_strategies: *id001
-      is_gas_estimation_enabled: true
-      poa_chain: false
-    zksync:
-      address: http://127.0.0.1:8545
-      chain_id: 1337
-      default_gas_price_strategy: eip1559
-      gas_price_strategies: *id001
-      is_gas_estimation_enabled: true
-      poa_chain: false
-    bnb:
-      address: http://127.0.0.1:8545
-      chain_id: 1337
-      default_gas_price_strategy: eip1559
-      gas_price_strategies: *id001
-      is_gas_estimation_enabled: true
-      poa_chain: false
-    gnosis:
-      address: http://127.0.0.1:8545
-      chain_id: 1337
-      default_gas_price_strategy: eip1559
-      gas_price_strategies: *id001
-      is_gas_estimation_enabled: true
-      poa_chain: false
     consensys:
       address: http://127.0.0.1:8545
       chain_id: 1337
       default_gas_price_strategy: eip1559
-      gas_price_strategies: *id001
+      gas_price_strategies:
+        gas_station: *id001
+        eip1559:
+          max_gas_fast: 1500
+          fee_history_blocks: 10
+          fee_history_percentile: 5
+          min_allowed_tip: 1
+          default_priority_fee: null
+          fallback_estimate:
+            maxFeePerGas: 20000000000
+            maxPriorityFeePerGas: 3000000000
+          priority_fee_increase_boundary: 200
       is_gas_estimation_enabled: true
       poa_chain: false
     celo:
       address: http://127.0.0.1:8545
       chain_id: 42220
       default_gas_price_strategy: eip1559
-      gas_price_strategies: *id001
+      gas_price_strategies:
+        gas_station: *id001
+        eip1559:
+          max_gas_fast: 1500
+          fee_history_blocks: 10
+          fee_history_percentile: 5
+          min_allowed_tip: 1
+          default_priority_fee: null
+          fallback_estimate:
+            maxFeePerGas: 20000000000
+            maxPriorityFeePerGas: 3000000000
+          priority_fee_increase_boundary: 200
       is_gas_estimation_enabled: true
       poa_chain: true
     optimism:
       address: http://127.0.0.1:8545
       chain_id: 10
       default_gas_price_strategy: eip1559
-      gas_price_strategies: *id001
+      gas_price_strategies:
+        gas_station: *id001
+        eip1559:
+          max_gas_fast: 1500
+          fee_history_blocks: 10
+          fee_history_percentile: 5
+          min_allowed_tip: 1
+          default_priority_fee: null
+          fallback_estimate:
+            maxFeePerGas: 20000000000
+            maxPriorityFeePerGas: 3000000000
+          priority_fee_increase_boundary: 200
       is_gas_estimation_enabled: true
       poa_chain: false
     base:
       address: http://127.0.0.1:8545
       chain_id: 8453
       default_gas_price_strategy: eip1559
-      gas_price_strategies: *id001
+      gas_price_strategies:
+        gas_station: *id001
+        eip1559:
+          max_gas_fast: 1500
+          fee_history_blocks: 10
+          fee_history_percentile: 5
+          min_allowed_tip: 1
+          default_priority_fee: null
+          fallback_estimate:
+            maxFeePerGas: 20000000000
+            maxPriorityFeePerGas: 3000000000
+          priority_fee_increase_boundary: 200
       is_gas_estimation_enabled: true
       poa_chain: false
     mode:
       address: http://127.0.0.1:8545
       chain_id: 34443
       default_gas_price_strategy: eip1559
-      gas_price_strategies: *id001
+      gas_price_strategies:
+        gas_station: *id001
+        eip1559:
+          max_gas_fast: 1500
+          fee_history_blocks: 20
+          fee_history_percentile: 5
+          min_allowed_tip: 1
+          default_priority_fee: null
+          fallback_estimate:
+            maxFeePerGas: 2000000000
+            maxPriorityFeePerGas: 300000000
+          priority_fee_increase_boundary: 200
       is_gas_estimation_enabled: true
       poa_chain: false
     polygon:
       address: http://127.0.0.1:8545
       chain_id: 137
       default_gas_price_strategy: eip1559_polygon
-      gas_price_strategies: *id001
+      gas_price_strategies:
+        gas_station: *id001
+        eip1559:
+          max_gas_fast: 1500
+          fee_history_blocks: 10
+          fee_history_percentile: 5
+          min_allowed_tip: 1
+          default_priority_fee: null
+          fallback_estimate:
+            maxFeePerGas: 20000000000
+            maxPriorityFeePerGas: 3000000000
+          priority_fee_increase_boundary: 200
       is_gas_estimation_enabled: true
       poa_chain: false
     fraxtal:
       address: http://127.0.0.1:8545
       chain_id: 252
       default_gas_price_strategy: eip1559
-      gas_price_strategies: *id001
+      gas_price_strategies:
+        gas_station: *id001
+        eip1559:
+          max_gas_fast: 1500
+          fee_history_blocks: 10
+          fee_history_percentile: 5
+          min_allowed_tip: 1
+          default_priority_fee: null
+          fallback_estimate:
+            maxFeePerGas: 20000000000
+            maxPriorityFeePerGas: 3000000000
+          priority_fee_increase_boundary: 200
       is_gas_estimation_enabled: true
       poa_chain: false
   retry_attempts: 240
