fix: bnb is a PoA chain

--- a/packages/valory/connections/ledger/connection.yaml
+++ b/packages/valory/connections/ledger/connection.yaml
@@ -121,7 +121,7 @@ config:
             maxPriorityFeePerGas: 3000000000
           priority_fee_increase_boundary: 200
       is_gas_estimation_enabled: true
-      poa_chain: false
+      poa_chain: true
     gnosis:
       address: http://127.0.0.1:8545
       chain_id: 1337
