style: fix lint

--- a/tox.ini
+++ b/tox.ini
@@ -487,3 +487,6 @@ commands = {toxinidir}/scripts/check_dependencies.py
 deps =
     toml==0.10.2
 commands = {toxinidir}/scripts/check_dependencies.py --check
+
+[Authorized Packages]
+urllib3: >=2.4.0
