Chore: Deprecate support for Python <3.10
Signed-off-by: Ojuswi Rastogi <ojuswimail@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@
 ; we set the associated flag (e.g. for linting we don't need
 ; the package installation).
 [tox]
-envlist = bandit, safety, black, black-check, isort, isort-check, fix-copyright, check-copyright, hash-check, docs, flake8, liccheck, mypy, pylint, vulture, {plugins-,}py{3.8,3.9,3.10,3.10-cov,3.11}, dependencies-check, package-version-checks, lock-packages, package-dependencies-checks, plugins_deps, fix-doc-hashes, check-doc-links-hashes, check-generate-all-protocols, spell-check, generate-api-documentation
+envlist = bandit, safety, black, black-check, isort, isort-check, fix-copyright, check-copyright, hash-check, docs, flake8, liccheck, mypy, pylint, vulture, {plugins-,}py{3.10,3.10-cov,3.11}, dependencies-check, package-version-checks, lock-packages, package-dependencies-checks, plugins_deps, fix-doc-hashes, check-doc-links-hashes, check-generate-all-protocols, spell-check, generate-api-documentation
 ; when running locally we don't want to fail for no good reason
 skip_missing_interpreters = true
 
@@ -119,28 +119,6 @@ commands =
     python -m pip install --no-deps file://{toxinidir}/plugins/aea-ledger-ethereum-hwi
     pytest -rfE plugins/aea-ledger-ethereum-hwi/tests --durations=0 --cov-report=html --cov-report=xml --cov-report=term --cov-report=term-missing --cov=aea_ledger_ethereum_hwi --cov-config=.coveragerc --suppress-no-test-exit-code --cov-append {posargs}
 
-[test-plugins-lte-3.9]
-deps =
-    {[tests-common]deps}
-    pytest-custom-exit-code==0.3.0
-    open-aea-flashbots==1.4.0
-commands =
-    {[commands-local-install]commands}
-    pytest -rfE plugins/aea-ledger-fetchai/tests --durations=0 --cov-report=html --cov-report=xml --cov-report=term --cov-report=term-missing --cov=aea_ledger_fetchai --cov-config=.coveragerc --suppress-no-test-exit-code --cov-append {posargs}
-    pytest -rfE plugins/aea-ledger-ethereum/tests --durations=0 --cov-report=html --cov-report=xml --cov-report=term --cov-report=term-missing --cov=aea_ledger_ethereum --cov-config=.coveragerc --suppress-no-test-exit-code --cov-append {posargs}
-    pytest -rfE plugins/aea-ledger-cosmos/tests --durations=0 --cov-report=html --cov-report=xml --cov-report=term --cov-report=term-missing --cov=aea_ledger_cosmos --cov-config=.coveragerc --suppress-no-test-exit-code --cov-append {posargs}
-    pytest -rfE plugins/aea-cli-ipfs/tests --durations=0 --cov-report=html --cov-report=xml --cov-report=term --cov-report=term-missing --cov=aea_cli_ipfs --cov-config=.coveragerc --suppress-no-test-exit-code --cov-append {posargs}
-
-    python -m pip install --no-deps file://{toxinidir}/plugins/aea-ledger-ethereum-hwi
-    pytest -rfE plugins/aea-ledger-ethereum-hwi/tests --durations=0 --cov-report=html --cov-report=xml --cov-report=term --cov-report=term-missing --cov=aea_ledger_ethereum_hwi --cov-config=.coveragerc --suppress-no-test-exit-code --cov-append {posargs}
-
-    python -m pip install --no-deps file://{toxinidir}/plugins/aea-ledger-ethereum-flashbots
-    pytest -rfE plugins/aea-ledger-ethereum-flashbots/tests --durations=0 --cov-report=html --cov-report=xml --cov-report=term --cov-report=term-missing --cov=aea_ledger_ethereum_flashbots --cov-config=.coveragerc --suppress-no-test-exit-code --cov-append {posargs}
-
-    python -m pip install file://{toxinidir}/plugins/aea-ledger-solana
-    pytest -rfE plugins/aea-ledger-solana/tests --durations=0 --cov-report=html --cov-report=xml --cov-report=term --cov-report=term-missing --cov=aea_ledger_solana --cov-config=.coveragerc --suppress-no-test-exit-code --cov-append {posargs}
-
-
 [testenv:py3.10]
 basepython = python3.10
 usedevelop = True
@@ -155,8 +133,8 @@ commands = {[test-packages]commands}
 [testenv:plugins-py3.10]
 basepython = python3.10
 usedevelop = True
-deps = {[test-plugins-lte-3.9]deps}
-commands = {[test-plugins-lte-3.9]commands}
+deps = {[test-plugins]deps}
+commands = {[test-plugins]commands}
 ; Since the ledgerwallet still uses protobufs compiled using protoc<=3.20
 setenv =
     PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
@@ -175,8 +153,8 @@ commands = {[test-packages]commands}
 [testenv:plugins-py3.11]
 basepython = python3.11
 usedevelop = True
-deps = {[test-plugins-lte-3.9]deps}
-commands = {[test-plugins-lte-3.9]commands}
+deps = {[test-plugins]deps}
+commands = {[test-plugins]commands}
 ; Since the ledgerwallet still uses protobufs compiled using protoc<=3.20
 setenv =
     PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
@@ -417,49 +395,11 @@ commands =
     {posargs}
 
 [testenv_multi]
-basepython = python3
+basepython = python3.10
 whitelist_externals = /bin/sh
 passenv = *
 extras = all
 deps = {[tests-common]deps}
-
-[testenv:py3.8]
-basepython = python3.8
-deps = {[testenv_multi]deps}
-commands = {[test-framework]commands}
-
-[testenv:packages-py3.8]
-basepython = python3.8
-deps = {[testenv_multi]deps}
-commands = {[test-packages]commands}
-
-[testenv:py3.9]
-basepython = python3.9
-deps = {[testenv_multi]deps}
-commands = {[test-framework]commands}
-
-[testenv:packages-py3.9]
-basepython = python3.9
-deps = {[testenv_multi]deps}
-commands = {[test-packages]commands}
-
-[testenv:plugins-py3.8]
-basepython = python3.8
-deps =
-    {[testenv_multi]deps}
-    pytest-custom-exit-code==0.3.0
-commands = {[test-plugins]commands}
-; Since the ledgerwallet still uses protobufs compiled using protoc<=3.20
-setenv =
-    PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
-
-[testenv:plugins-py3.9]
-basepython = python3.9
-deps = {[test-plugins-lte-3.9]deps}
-commands = {[test-plugins-lte-3.9]commands}
-; Since the ledgerwallet still uses protobufs compiled using protoc<=3.20
-setenv =
-    PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION=python
 
 [testenv:check-api-docs]
 skipsdist = True
