--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -434,7 +434,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest-large, windows-latest]
-        python_version: ['3.8', '3.9', '3.10', '3.11']
+        python_version: ['3.10', '3.11']
     timeout-minutes: 120
     steps:
       - uses: actions/checkout@master
