--- a/strategy.ini
+++ b/strategy.ini
@@ -93,4 +93,9 @@ chardet: >=3.0.4
 certifi: >=2019.11.28
 ; licence is MIT, but the tool does not detect it
 attrs: ==25.3.0
-urllib3: ==2.4.0
+; urllib3 is MIT licensed but tool doesn't detect it
+urllib3: ==2.5.0
+; click is BSD-3-Clause licensed but tool doesn't detect it
+click: ==8.2.1
+; typing-extensions is PSF licensed but tool doesn't detect it
+typing-extensions: ==4.14.1
