--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
           sudo apt-get autoremove
           sudo apt-get autoclean
           python -m pip install --upgrade pip
-          pip install pipenv twine
+          pip install setuptools pipenv twine
 
       - name: Build wheels and source tarball
         run: |
