--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,8 +28,8 @@ jobs:
 
       - name: Setup pipenv and install build dependencies
         run: |
-          pipenv install --dev --skip-lock
-          pipenv run pip install setuptools wheel
+          make new_env
+          pipenv run pip install --upgrade setuptools wheel
 
       - name: Build wheels and source tarball
         run: |
