--- a/tox.ini
+++ b/tox.ini
@@ -46,7 +46,7 @@ deps =
     ; aea_ledger_ethereum
     web3<7,>=6.0.0
     ipfshttpclient==0.8.0a2
-    eth-account<0.9.0,>=0.8.0
+    eth-account>=0.13.0,<0.14.0
     ; for password encryption in cosmos
     pycryptodome>=3.10.1
     cosmpy==0.9.2
@@ -108,7 +108,7 @@ commands =
 deps =
     {[tests-common]deps}
     pytest-custom-exit-code==0.3.0
-    hexbytes==0.3.0
+    hexbytes==1.3.1
 commands =
     {[commands-local-install]commands}
     pytest -rfE plugins/aea-ledger-fetchai/tests --durations=0 --cov-report=html --cov-report=xml --cov-report=term --cov-report=term-missing --cov=aea_ledger_fetchai --cov-config=.coveragerc --suppress-no-test-exit-code --cov-append {posargs}
@@ -211,6 +211,7 @@ commands = {toxinidir}/scripts/check_copyright_notice.py
 [testenv:check-copyright]
 skipsdist = True
 skip_install = True
+allowlist_externals = {toxinidir}/scripts/check_copyright_notice.py
 deps =
 commands = {toxinidir}/scripts/check_copyright_notice.py --check
 
@@ -341,6 +342,9 @@ commands = {toxinidir}/scripts/generate_package_list.py
 [testenv:check-doc-links-hashes]
 skipsdist = True
 usedevelop = True
+allowlist_externals = {toxinidir}/scripts/check_doc_links.py
+                      {toxinidir}/scripts/check_doc_ipfs_hashes.py
+                      {toxinidir}/scripts/check_ipfs_hashes_pushed.py
 commands = {toxinidir}/scripts/check_doc_links.py
            {toxinidir}/scripts/check_doc_ipfs_hashes.py
            {toxinidir}/scripts/check_ipfs_hashes_pushed.py
