Chore: Update ACN URIs
Signed-off-by: Ojuswi Rastogi <ojuswimail@gmail.com>

--- a/scripts/acn/acn-deployment/values.yaml
+++ b/scripts/acn/acn-deployment/values.yaml
@@ -3,7 +3,7 @@
 dns:
   enabled: true
   dnsname: acn-node-443
-  publicdnsname: acn.staging.autonolas.tech
+  publicdnsname: acn.autonolas.tech
 
 acnnodes:
   enabled: true
