fix: flakiness of `test_eip1559_on_network`
Signed-off-by: Ojuswi Rastogi <ojuswimail@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -102,7 +102,7 @@ commands =
     ; for some reason tox installs aea without respect to the dependencies version specified in setup.py. at least in CI env
     ; so install current aea in a normal way
     {[commands-local-install]commands}
-    aea test --cov --append packages --durations=0 {posargs}
+    pytest packages/fetchai/connections/local/tests/test_misc.py::test_connection_twice_return_none
 
 [test-plugins]
 deps =
