--- a/deploy-image/Dockerfile
+++ b/deploy-image/Dockerfile
@@ -9,7 +9,7 @@ RUN apk add --no-cache gcc musl-dev python3-dev libffi-dev openssl-dev
 
 # https://stackoverflow.com/a/57485724
 RUN apk add --update --no-cache py3-numpy py3-scipy py3-pillow
-ENV PYTHONPATH "$PYTHONPATH:/usr/lib/python3.10/site-packages"
+ENV PYTHONPATH="$PYTHONPATH:/usr/lib/python3.10/site-packages"
 
 # golang
 RUN apk add --no-cache go
