--- a/develop-image/Dockerfile
+++ b/develop-image/Dockerfile
@@ -1,5 +1,5 @@
 FROM ubuntu:22.04
-ENV DEBIAN_FRONTEND noninteractive
+ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update && apt-get upgrade -y
 RUN apt-get install -y                                                       \
@@ -43,8 +43,8 @@ RUN apt-get install -y                                                       \
 
 
 # needed by Pipenv
-ENV LC_ALL C.UTF-8
-ENV LANG C.UTF-8
+ENV LC_ALL=C.UTF-8
+ENV LANG=C.UTF-8
 
 RUN sudo apt-get install -y tox
 RUN python3 -m pip install -U pipenv
