--- a/strategy.ini
+++ b/strategy.ini
@@ -92,10 +92,12 @@ fetchai-ledger-api: >=0.0.1
 chardet: >=3.0.4
 certifi: >=2019.11.28
 ; licence is MIT, but the tool does not detect it
-attrs: ==25.3.0
+attrs: ==25.4.0
 ; urllib3 is MIT licensed but tool doesn't detect it
 urllib3: ==2.5.0
 ; click is BSD-3-Clause licensed but tool doesn't detect it
 click: <8.3.0
 ; typing-extensions is PSF licensed but tool doesn't detect it
 typing-extensions: ==4.15.0
+idna: ==3.11
+tomli: ==2.3.0
