--- a/packages/valory/connections/http_server/connection.yaml
+++ b/packages/valory/connections/http_server/connection.yaml
@@ -9,7 +9,7 @@ aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
   README.md: bafybeifepluovb4so2eem34ulpcp4svegb2dqfpmtojtofhfkb3j2xanui
   __init__.py: bafybeifykou5sazojmc7hdqnsdp4mncd4zh3xys3mdgdzwks23mvhzu2ga
-  connection.py: bafybeie42txykvedioambi2dq4nurktilg5v6qleo2iaesc7psmrobdhva
+  connection.py: bafybeignsd6wsv74wz2eutbqurehgtc6qrgd4fbuqt57gbxnys5cbnqx4m
   tests/__init__.py: bafybeifqaf7cnc4oczjkbwmv4ahrkbiqxrojwgowej3kbri3skz4lzt43i
   tests/data/certs/server.crt: bafybeiev5i3xxkvn36wflf633gkumuxexsw4y2bubwbvl7edrz4igfgv34
   tests/data/certs/server.csr: bafybeicvp7xdl5w3o4bzikkudpduitss3bpp6xqfwlxbw6kabdangohy5u
@@ -25,6 +25,7 @@ config:
   api_spec_path: null
   host: 127.0.0.1
   port: 8000
+  timeout: null
   ssl_cert: null
   ssl_key: null
   target_skill_id: null
