--- a/Pipfile
+++ b/Pipfile
@@ -26,6 +26,7 @@ eth-account = "<0.9.0,>=0.8.0"
 gym = "==0.15.6"
 hypothesis = "==6.21.6"
 ipfshttpclient = "==0.8.0a2"
+multiaddr = "==0.0.9"
 liccheck = "==0.6.0"
 memory-profiler = "==0.57.0"
 # ^ still used?
@@ -59,3 +60,5 @@ werkzeug = "*"
 pytest-asyncio = "*"
 multidict = "*"
 toml = "==0.10.2"
+pbr = "==7.0.1"
+marshmallow = "<4.0.0"
