--- a/tox.ini
+++ b/tox.ini
@@ -46,6 +46,7 @@ deps =
     ; aea_ledger_ethereum
     web3<7,>=6.0.0
     ipfshttpclient==0.8.0a2
+    multiaddr==0.0.9
     eth-account<0.9.0,>=0.8.0
     ; for password encryption in cosmos
     pycryptodome>=3.10.1
@@ -186,6 +187,8 @@ skipsdist = True
 skip_install = True
 deps =
     tomte[bandit]==0.2.13
+    ; fixed in future tomte releases
+    pbr==7.0.1
 commands = bandit -r aea benchmark examples \
            plugins/aea-ledger-fetchai/aea_ledger_fetchai \
            plugins/aea-ledger-ethereum/aea_ledger_ethereum \
@@ -338,6 +341,8 @@ skipsdist = True
 skip_install = True
 deps =
     tomte[safety]==0.2.13
+    ; fixed in future tomte releases
+    marshmallow<4.0.0
 commands = safety check -i 37524 -i 38038 -i 37776 -i 38039 -i 39621 -i 40291 -i 39706 -i 51358 -i 51499 -i 67599 -i 70612
 
 [testenv:vulture]
