--- a/strategy.ini
+++ b/strategy.ini
@@ -94,7 +94,9 @@ certifi: >=2019.11.28
 ; licence is MIT, but the tool does not detect it
 attrs: ==25.4.0
 ; urllib3 is MIT licensed but tool doesn't detect it
-urllib3: ==2.5.0
+urllib3: >=2.5.0
+; iniconfig is MIT licensed but tool doesn't detect it
+iniconfig: >=2.3.0
 ; click is BSD-3-Clause licensed but tool doesn't detect it
 click: <8.3.0
 ; typing-extensions is PSF licensed but tool doesn't detect it
